clusters/pi/status-page/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: status-page
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
