clusters/pi/status-page/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-page
  namespace: status-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: status-page
  template:
    metadata:
      labels:
        app: status-page
    spec:
      serviceAccountName: status-page
      containers:
        - name: status-page
          image: ghcr.io/hagaspa/bons8i/status-page
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 32Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
