clusters/pi/status-page/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-page
  namespace: status-page
spec:
  selector:
    app: status-page
  ports:
    - name: http
      port: 80
      targetPort: http
