clusters/pi/status-page/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: status-page
  namespace: status-page
spec:
  podSelector:
    matchLabels:
      app: status-page
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudflared
          podSelector:
            matchLabels:
              app: cloudflared
      ports:
        - protocol: TCP
          port: 8080
